[package]
edition = "2021"
name = "suredbits-oracle-client"
version = "0.1.0"

[dependencies]
bitcoin-test-utils = {path = "../bitcoin-test-utils"}
dlc-manager = {path = "../dlc-manager"}
dlc-messages = {path = "../dlc-messages"}
lightning = {version = "0.0.112"}
reqwest = {version = "0.11", features = ["blocking", "json"]}
secp256k1-zkp = {version = "0.7.0"}
serde = {version = "*", features = ["derive"]}
